--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -25016,8 +25016,8 @@ comments</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkRadioButton" id="radio_by_series">
-                                <property name="label" translatable="yes">By series</property>
+                              <widget class="GtkRadioButton" id="radio_by_sets">
+                                <property name="label" translatable="yes">By sets</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -25036,7 +25036,7 @@ comments</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkImage" id="image_auto_by_series">
+                              <widget class="GtkImage" id="image_auto_by_sets">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
@@ -25119,9 +25119,9 @@ all the persons perform second test ...</property>
                             <child>
                               <widget class="GtkLabel" id="label_series_info">
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">All the persons perform first serie,
-all the persons perform second serie ...
-One serie can contain several tests.</property>
+                                <property name="label" translatable="yes">All the persons perform first set,
+all the persons perform second set ...
+One set can contain several tests.</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -25306,7 +25306,7 @@ One serie can contain several tests.</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="yalign">0</property>
-                                        <property name="label" translatable="yes">Serie 1</property>
+                                        <property name="label" translatable="yes">Set 1</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -25346,7 +25346,7 @@ One serie can contain several tests.</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="yalign">0</property>
-                                        <property name="label" translatable="yes">Serie 2</property>
+                                        <property name="label" translatable="yes">Set 2</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -25387,7 +25387,7 @@ One serie can contain several tests.</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="yalign">0</property>
-                                        <property name="label" translatable="yes">Serie 3</property>
+                                        <property name="label" translatable="yes">Set 3</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -25456,10 +25456,35 @@ One serie can contain several tests.</property>
                                 <property name="border_width">10</property>
                                 <property name="spacing">8</property>
                                 <child>
-                                  <widget class="GtkLabel" id="label6">
+                                  <widget class="GtkVBox" id="vbox5">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Name</property>
+                                    <property name="spacing">8</property>
+                                    <child>
+                                      <widget class="GtkLabel" id="label6">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="label" translatable="yes">Name</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkLabel" id="label8">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <property name="xalign">0.4699999988079071</property>
+                                        <property name="label" translatable="yes">Description (optional)</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -25468,16 +25493,45 @@ One serie can contain several tests.</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="entry_save">
+                                  <widget class="GtkVBox" id="vbox11">
                                     <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="invisible_char">●</property>
-                                    <property name="invisible_char_set">True</property>
-                                    <property name="primary_icon_activatable">False</property>
-                                    <property name="secondary_icon_activatable">False</property>
-                                    <property name="primary_icon_sensitive">True</property>
-                                    <property name="secondary_icon_sensitive">True</property>
-                                    <signal name="changed" handler="on_entry_save_changed" swapped="no"/>
+                                    <property name="can_focus">False</property>
+                                    <property name="spacing">8</property>
+                                    <child>
+                                      <widget class="GtkEntry" id="entry_save_name">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="invisible_char">●</property>
+                                        <property name="invisible_char_set">True</property>
+                                        <property name="primary_icon_activatable">False</property>
+                                        <property name="secondary_icon_activatable">False</property>
+                                        <property name="primary_icon_sensitive">True</property>
+                                        <property name="secondary_icon_sensitive">True</property>
+                                        <signal name="changed" handler="on_entry_save_name_changed" swapped="no"/>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkEntry" id="entry_save_description">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="invisible_char">●</property>
+                                        <property name="invisible_char_set">True</property>
+                                        <property name="primary_icon_activatable">False</property>
+                                        <property name="secondary_icon_activatable">False</property>
+                                        <property name="primary_icon_sensitive">True</property>
+                                        <property name="secondary_icon_sensitive">True</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
                                   </widget>
                                   <packing>
                                     <property name="expand">True</property>
